<?xml version="1.0"?>
<package format="2">
  <name>subt_ros</name>
  <version>0.1.0</version>
  <description>Various ROS nodes for the DARPA SubT challenge.</description>
  <license>Apache 2.0</license>
  <maintainer email="caguero@openrobotics.org">Carlos Agüero</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>topic_tools</build_depend>
  <depend>geometry_msgs</depend>
  <depend>ignition-common3</depend>
  <depend>ignition-math6</depend>
  <depend>ignition-msgs4</depend>
  <depend>ignition-transport7</depend>
  <depend>rosbag</depend>
  <depend>theora_image_transport</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>subt_communication_broker</depend>
  <depend>subt_msgs</depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>ros_ign_image</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
