<package format="2">
  <name>subt_rotors_controller</name>
  <version>1.0.0</version>
  <description>Modified version of RotorS roll pitch yaw thrust controller</description>

  <maintainer email="ichen@osrfoundation.org">Ian Chen</maintainer>

  <author>Ian Chen</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rotors_control</depend>

</package>
