<?xml version="1.0"?>
<package format="2">
  <name>teambase_description</name>
  <version>0.0.1</version>
  <description>The teambase_description package</description>
  <author email="nate@openrobotics.org">Nate Koenig</author>
  <maintainer email="nate@openrobotics.org">Nate Koenig</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
