<?xml version="1.0"?>
<package format="2">
  <name>x1_description</name>
  <version>0.0.0</version>
  <description>The x1_description package</description>
  <maintainer email="caguero@openrobotics.org">Carlos Aguero</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>lms1xx</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
