<?xml version="1.0"?>
<package>
  <name>x1_gazebo</name>
  <version>0.0.1</version>
  <description>X1 Simulator bringup</description>

  <author email="caguero@openrobotics.org">Carlos Aguero</author>
  <maintainer email="caguero@openrobotics.org">Carlos Aguer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>x1_control</run_depend>
  <run_depend>x1_description</run_depend>
  <run_depend>multimaster_launch</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>
  <run_depend>rostopic</run_depend>

  <export>
  </export>
</package>
