<?xml version="1.0"?>
<package>
  <name>x2_gazebo</name>
  <version>0.0.1</version>
  <description>Launchfiles to use X2 in Gazebo.</description>

  <maintainer email="caguero@openrobotics.org">Carlos Aguero</maintainer>
  <author email="caguero@openrobotics.org">Carlos Aguero</author>
  <author>Mike Purvis</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend version_gte="0.0">x2_control</run_depend>
  <run_depend version_gte="0.0">x2_description</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
