<?xml version="1.0"?>
<package>
  <name>x2_msgs</name>
  <version>0.0.1</version>
  <description>Messages exclusive to X2, especially for representing low-level motor commands and sensors.</description>
  <author email="caguero@openrobotics.org">Carlos Aguero</author>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <maintainer email="caguero@openrobotics.org">Carlos Aguero</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
